fix for some cards being misaligned

--- a/scss/04-components/_mainsection.scss
+++ b/scss/04-components/_mainsection.scss
@@ -168,7 +168,8 @@
   .primary-content {
     grid-area: pContent;
 
-    .card:first-child {
+    // idea
+    .card:nth-child(-n + 2 of .card) {
       margin-top: 0;
     }
 
